--- a/finvis.html
+++ b/finvis.html
@@ -4,6 +4,8 @@
     <title>Pie Chart</title>
     <script type="text/javascript" src="d3/d3.v2.js"></script>
     <script type="text/javascript" src="data.js"></script>
+	<script type="text/javascript" src="parenting.js"></script>
+	<script type="text/javascript" src="viewstate.js"></script>
     <script type="text/javascript" src="viewobj.js"></script>
 <link rel="stylesheet" href="vis-gen.css" />
     <style type="text/css">
@@ -24,7 +26,8 @@ circle.axis_circle {
   </head>
   <body>
 <div style="float:right;">
-
+<a href="#" onClick="javascript:viewstate.zoom(4/3); return false;">Zoom in</a><br/>
+<a href="#" onClick="javascript:viewstate.zoom(3/4); return false;">Zoom out</a><br/>
 <input type="button" onClick="javascript:update(data_aus_revenue);" value="Cth Revenue"/><br />
   <input type="button" onClick="javascript:update(data_aus_rev_exp);" value="Cth Revenue &amp; Expenditure"/><br />
   <input type="button" onClick="javascript:update(data_aus_real);" value="Cth R.E.A.L."/><br />
@@ -39,15 +42,9 @@ circle.axis_circle {
   <input type="button" value="Update" onClick="javascript:updateFromFields()" />
   </div>
   <script type="text/javascript">
-  var width = window.innerWidth-300,
-    height = window.innerHeight*0.9,
-    maxOuterRadius = Math.min(width, height) / 2;
+  
 
-  viewstate={};
-  viewstate.svg=d3.select("body").append("svg")
-  .attr("width", width)
-  .attr("height", height);
-
+  window.viewstate=new ViewState(d3.select("body").append("svg"));
   
   priviewobj = new ViewObj( data_aus_real, viewstate, [0,0] );
   priviewobj.render();
