to index.html; warn for ie<9

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@ circle.axis_circle {
     </style>
   </head>
   <body>
+<!--[if lt IE 9]>
+Hi! You seem to be using Internet Explorer 8 or below. Unfortunately this website only functions on modern, standards-compliant browsers such as:
+<ul>
+  <li><a href="http://windows.microsoft.com/en-AU/internet-explorer/products/ie/home">Internet Explorer 9</a></li>
+  <li><a href="http://www.google.com/chrome">Google Chrome</a></li>
+  <li><a href="http://www.getfirefox.com/">Mozilla Firefox</a></li>
+  <li><a href="http://www.apple.com/safari/">Safari</a></li>
+  <li><a href="http://www.opera.com/">Opera</a>
+  </ul>
+  Please try again with one of those.<br />
+<![endif]-->
 <div style="float:right;">
 <a href="#" onClick="javascript:viewstate.zoom(4/3); return false;">Zoom in</a><br/>
 <a href="#" onClick="javascript:viewstate.zoom(3/4); return false;">Zoom out</a><br/>
