--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ Arrow keys scroll the view.
   vo.render();
 
   </script>
+  <div style="height: 70px">
 <p id="tourCaption"></p>
+	</div>
   </body>
 </html>
