--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@ Arrow keys scroll the view.
 	<option value="2011-12" selected="selected">2011-12</option>
   </select>
   <hr/>
-  Or, take the tour...
   <input type="button" value="&lt;-" / onClick="tour.prev()" id="prevBtn" disabled="disabled" />
   <input type="button" value="-&gt;" / onClick="tour.next()" id="nextBtn" />
 <br/>
@@ -70,7 +69,7 @@ Arrow keys scroll the view.
 
   </script>
   <div style="position: absolute; top: 10px; height: 70px">
-<p id="tourCaption"></p>
+<p id="tourCaption">Take the tour with the -&gt; button.</p>
 	</div>
   </body>
 </html>
