--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@ Hi! You seem to be using Internet Explorer 8 or below. Unfortunately this websit
   </ul>
   Please try again with one of those.<br />
   <style type="text/css">
-  #tourCaption {
+  #tourCaption, #rightToolBox {
   display: none;
   }
   </style>
   <![endif]-->
-<div style="float:right;">
+<div id="rightToolBox" style="float:right;">
 <a href="#" onClick="javascript:viewstate.zoom(4/3); return false;">Zoom in</a><br/>
 <a href="#" onClick="javascript:viewstate.zoom(3/4); return false;">Zoom out</a><br/>
 Arrow keys scroll the view.
