floating stuff, proper resize support

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ Hi! You seem to be using Internet Explorer 8 or below. Unfortunately this websit
   }
   </style>
   <![endif]-->
-<div id="rightToolBox" style="float:right;">
+  <div style="float:right; width:150px;">
+<div id="rightToolBox" style="position:fixed;">
 <a href="#" onClick="javascript:viewstate.zoom(4/3); return false;">Zoom in</a><br/>
 <a href="#" onClick="javascript:viewstate.zoom(3/4); return false;">Zoom out</a><br/>
 Arrow keys scroll the view.
@@ -42,6 +43,7 @@ Arrow keys scroll the view.
   <input type="button" value="-&gt;" / onClick="tour.next()" id="nextBtn" />
 <br/>
 
+  </div>
   </div>
   <script type="text/javascript">
   
