--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Pie Chart</title>
     <script type="text/javascript" src="d3/d3.v2.js"></script>
+ <script type="text/javascript" src="jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="jquery.contextmenu.r2.js"></script>
+<script type="text/javascript">jQuery.noConflict();</script>
     <script type="text/javascript" src="data.js"></script>
 	<script type="text/javascript" src="parenting.js"></script>
 	<script type="text/javascript" src="viewstate.js"></script>
@@ -63,5 +66,13 @@ Arrow keys scroll the view.
   <div style="position: absolute; top: 10px; height: 70px">
 <p id="tourCaption">Take the tour with the -&gt; button.</p>
 	</div>
+
+<div id="wedgeMenu" class="contextMenu">
+  <ul>
+    <li id="deleteMenuItem">Delete</li>
+    <li id="centreViewMenuItem">Centre view on</li>
+    <li id="duplicateMenuItem">Duplicate</li>
+  </ul>
+  </div>
   </body>
 </html>
