--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ Arrow keys scroll the view.
     <li id="deleteMenuItem">Delete</li>
     <li id="centreViewMenuItem">Centre view on</li>
     <li id="duplicateMenuItem">Duplicate</li>
+	<li id="resetMenuItem">Reset</li>
   </ul>
   </div>
   </body>
