--- a/index.html
+++ b/index.html
@@ -34,26 +34,20 @@ Hi! You seem to be using Internet Explorer 8 or below. Unfortunately this websit
   </style>
   <![endif]-->
   <div style="float:right; width:200px;">
-<div id="rightToolBox" style="position:fixed;">
+<div id="rightToolBox" style="position:fixed;"
+  onmousedown="javascript:event.stopPropagation();"
+  onmouseup="javascript:event.stopPropagation();">
 <a href="#" onClick="javascript:viewstate.zoom(4/3); return false;">Zoom in</a><br/>
 <a href="#" onClick="javascript:viewstate.zoom(3/4); return false;">Zoom out</a><br/>
-Arrow keys scroll the view.
+Drag things around, double-click, right-click, use the scroll wheel: explore!
 <hr />
-  <select onChange="javascript:periodChange(this);" id="periodSelector">
+<!--  <select onChange="javascript:periodChange(this);" id="periodSelector">
 	<option value="2010-11">2010-11</option>
 	<option value="2011-12" selected="selected">2011-12</option>
   </select>
-  <hr/>
-  <input type="button" value="&lt;-" / onClick="tour.prev()" id="prevBtn" disabled="disabled" />
-  <input type="button" value="-&gt;" / onClick="tour.next()"
-  id="nextBtn" />
-  <hr/>
-  <select id="entitySel" style="width:190px;"
-  onmousedown="javascript:viewstate.mouseData.inUI=true;"
-  onmouseup="javascript:viewstate.mouseData.inUI=false;"></select><br/>
+  <hr/>-->
+  <select id="entitySel" style="width:190px;"></select><br/>
   <input type="button" id="entityAdd"  onClick="javascript:addEntity();" value="Add Entity"></input>
-<br/>
-
   </div>
   </div>
   <script type="text/javascript">
@@ -84,10 +78,6 @@ Arrow keys scroll the view.
   vo.render();
 
   </script>
-  <div style="position: absolute; top: 10px; height: 70px">
-<p id="tourCaption">Take the tour with the -&gt; button.</p>
-	</div>
-
 <div id="wedgeMenu" class="contextMenu">
   <ul>
     <li id="deleteMenuItem">Delete</li>
