change to starting with theopenbudget data

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Drag things around, double-click, right-click, use the scroll wheel: explore!
   
   window.viewstate=new ViewState(d3.select("body").append("svg"));
 
-  var vo = new ViewObj( cth_fbo, viewstate, [0,0] );
+  var vo = new ViewObj( openbudget, viewstate, [0,0] );
   vo.period('2011-12');
   vo.render();
 
