2 fixes: remove duplicate item which was unimplemented, make axis labels disappear eventually

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Drag things around, double-click, right-click, use the scroll wheel: explore!
   <ul>
     <li id="deleteMenuItem">Delete</li>
     <li id="centreViewMenuItem">Centre view on</li>
-    <li id="duplicateMenuItem">Duplicate</li>
+    <!--<li id="duplicateMenuItem">Duplicate</li>-->
 	<li id="resetMenuItem">Reset</li>
   </ul>
   </div>
