--- a/index.html
+++ b/index.html
@@ -86,5 +86,14 @@ Drag things around, double-click, right-click, use the scroll wheel: explore!
 	<li id="resetMenuItem">Reset</li>
   </ul>
   </div>
+  <div id="wedge2Menu" class="contextMenu">
+  <ul>
+    <li id="deleteMenuItem">Delete</li>
+    <li id="centreViewMenuItem">Centre view on</li>
+    <li id="popBothMenuItem">Expand both</li>
+	<li id="resetMenuItem">Reset</li>
+  </ul>
+  </div>
+
   </body>
 </html>
