switch to remote files

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Pie Chart</title>
-    <script type="text/javascript" src="d3/d3.v2.js"></script>
- <script type="text/javascript" src="jquery-1.8.2.min.js"></script>
+<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript" src="jquery.contextmenu.r2.js"></script>
 <script type="text/javascript">jQuery.noConflict();</script>
     <script type="text/javascript" src="data.js"></script>
@@ -13,7 +13,6 @@
 	<script type="text/javascript" src="viewstate.js"></script>
     <script type="text/javascript" src="viewobj.js"></script>
 	<script type="text/javascript" src="events.js"></script>
-<script type="text/javascript" src="tour.js"></script>
 <link rel="stylesheet" href="vis-gen.css" />
   </head>
   <body>
