--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Pie Chart</title>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<meta charset="utf-8">
+<script src="http://d3js.org/d3.v3.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript" src="jquery.contextmenu.r2.js"></script>
 <script type="text/javascript">jQuery.noConflict();</script>
