--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript" src="jquery.contextmenu.r2.js"></script>
 <script type="text/javascript">jQuery.noConflict();</script>
+<script type="text/javascript" src="circles.js"></script>
     <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="theopenbudget.js"></script>
 <script type="text/javascript">entities.push(openbudget);</script>
