--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 	<script type="text/javascript" src="viewstate.js"></script>
     <script type="text/javascript" src="viewobj.js"></script>
 	<script type="text/javascript" src="events.js"></script>
-<link rel="stylesheet" href="vis-gen.css" />
+<link rel="stylesheet" href="vis.css" />
+<link rel="stylesheet" href="web.css" />
   </head>
   <body>
 <!--[if lt IE 9]>
@@ -40,8 +41,21 @@ Hi! You seem to be using Internet Explorer 8 or below. Unfortunately this websit
 <a href="#" title="Zoom in" onClick="javascript:viewstate.zoom(4/3,[viewstate.width/2,viewstate.height/2]); return false;"><img class="btnimg" src="images/icons/zoom-in.png" alt="Zoom in"/></a><br/>
 <a href="#" title="Zoom out" onClick="javascript:viewstate.zoom(3/4,[viewstate.width/2,viewstate.height/2]); return false;"><img class="btnimg" src="images/icons/zoom-out.png" alt="Zoom out"/></a><br/>
 <!--<a href="#" onClick="javascript:return false;"><img src="images/icons/zoom-box.png" class="btnimg" alt="Zoom in on a region"/></a><br/>
-<a href="#" onClick="javascript:return false;"><img src="images/icons/zoom-original.png" class="btnimg" alt="Restore original zoom"/></a><br/>
-<a href="#" onClick="javascript:return false;"><img src="images/icons/document-export.png" class="btnimg" alt="Save to disk"/></a><br/>-->
+<a href="#" onClick="javascript:return false;"><img src="images/icons/zoom-original.png" class="btnimg" alt="Restore original zoom"/></a><br/>-->
+<hr style="width: 32px; float:right;"/>
+<br style="clear:both; height:0px;"/>
+<a href="#" title="Save to disk" id="initSaveToDisk"><img src="images/icons/document-export.png" class="btnimg" alt="Save to disk"/></a><br/>
+<form id="saveToDiskForm" name="saveToDiskForm" class="hidden" action="/download" method="POST">
+  <select name="format">
+  <option value="svg">SVG</option>
+  <option value="png">PNG</option>
+</select>
+<input name="data" type="hidden"></input>
+<br/>
+<a href="#" id="saveToDisk"><img src="images/icons/dialog-apply.png" class="btnimg" alt="Save to disk"/></a>
+<a href="#" id="cancelSaveToDisk"><img src="images/icons/dialog-cancel.png" class="btnimg" alt="Cancel"/></a>
+</form>
+
 <hr style="width: 32px; float:right;"/>
 <br style="clear:both; height:0px;"/>
 <a href="#" id="initAddEntity"><img src="images/icons/list-add.png" class="btnimg" alt="Add an entity"/></a><br/>
