--- a/tests/test.html
+++ b/tests/test.html
@@ -19,7 +19,8 @@
   <script type="text/javascript" src="../viewstate.js"></script>
   <script type="text/javascript" src="../viewobj.js"></script>
   <script type="text/javascript" src="../events.js"></script>
-  <link rel="stylesheet" href="../vis-gen.css">
+  <link rel="stylesheet" href="../vis.css">
+  <link rel="stylesheet" href="../web.css">
  
   <!-- here start the actual tests -->
   <script src="viewstate.js"></script>
