--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@ Hi! You seem to be using Internet Explorer 8 or below. Unfortunately this websit
   onmouseup="javascript:event.stopPropagation();">
 <a href="#" title="Zoom in" onClick="javascript:viewstate.zoom(4/3,[viewstate.width/2,viewstate.height/2]); return false;"><img class="btnimg" src="images/icons/zoom-in.png" alt="Zoom in"/></a><br/>
 <a href="#" title="Zoom out" onClick="javascript:viewstate.zoom(3/4,[viewstate.width/2,viewstate.height/2]); return false;"><img class="btnimg" src="images/icons/zoom-out.png" alt="Zoom out"/></a><br/>
-<!--<a href="#" onClick="javascript:return false;"><img src="images/icons/zoom-box.png" class="btnimg" alt="Zoom in on a region"/></a><br/>
-<a href="#" onClick="javascript:return false;"><img src="images/icons/zoom-original.png" class="btnimg" alt="Restore original zoom"/></a><br/>-->
+<!--<a href="#" onClick="javascript:return false;"><img src="images/icons/zoom-box.png" class="btnimg" alt="Zoom in on a region"/></a><br/>-->
+<a href="#" title="Fit to screen" id="fitToScreen"><img src="images/icons/zoom-original.png" class="btnimg" alt="Fit to screen"/></a><br/>
 <hr style="width: 32px; float:right;"/>
 <br style="clear:both; height:0px;"/>
 <a href="#" title="Save to disk" id="initSaveToDisk"><img src="images/icons/document-export.png" class="btnimg" alt="Save to disk"/></a><br/>
