Dendritic packing.  * Things are slightly off-kilter when first added, fixme.  * Some test cases using the new packing efficiency calculator. Implictly this also tests circles.js and the two layout engines, but it would be worth writing proper tests.

--- a/index.html
+++ b/index.html
@@ -66,7 +66,15 @@ Hi! You seem to be using Internet Explorer 8 or below. Unfortunately this websit
 <p id="clickToPlaceTxt" class="hidden">Click to place</p>
 </div>
 <!--<input type="button" id="entityAdd"  onClick="javascript:addEntity();" value="Add Entity"></input>-->
-
+<hr style="width: 32px; float:right;"/>
+<br style="clear:both; height:0px;"/>
+<p>Packing model:</p>
+<select id="packingSel">
+<option value="default">Old-style</option>
+<option value="dendritic" selected="selected">Dendritic</option>
+</select>
+<p>Efficiency</p>
+<p id="packingEfficiency"></p>
 <!--<select onChange="javascript:periodChange(this);" id="periodSelector">
 	<option value="2010-11">2010-11</option>
 	<option value="2011-12" selected="selected">2011-12</option>
