--- a/tests/test.html
+++ b/tests/test.html
@@ -18,12 +18,16 @@
   <script type="text/javascript" src="../parenting.js"></script>
   <script type="text/javascript" src="../viewstate.js"></script>
   <script type="text/javascript" src="../viewobj.js"></script>
-  <script type="text/javascript" src="../events.js"></script>
   <link rel="stylesheet" href="../vis.css">
   <link rel="stylesheet" href="../web.css">
  
+  <!-- helper fns -->
+  <script src="tests.js"></script>
+  <script type="text/javascript" src="events.js"></script>
+
   <!-- here start the actual tests -->
   <script src="viewstate.js"></script>
+  <script src="viewobj.js"></script>
 </head>
 <body>
  
