Hollow circles for popped out (currently only expense & revenue in CSS).  * Checkbox for enclosing circles.  * Python/SVG bugfixes for large (>72k un-urlencoded) svg fragments. TODO optimise/rewrite once canoncial represention of state is ironed out.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ Hi! You seem to be using Internet Explorer 8 or below. Unfortunately this websit
 </select>
 <p>Efficiency</p>
 <p id="packingEfficiency"></p>
+<input type="checkbox" id="enclosingCircles"
+       checked="checked">Enclosing Circles?</input>
 <!--<select onChange="javascript:periodChange(this);" id="periodSelector">
 	<option value="2010-11">2010-11</option>
 	<option value="2011-12" selected="selected">2011-12</option>
