--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <script src="http://d3js.org/d3.v3.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript" src="jquery.contextmenu.r2.js"></script>
-<script type="text/javascript">jQuery.noConflict();</script>
+<script type="text/javascript" src="jquery.form.js"></script>
+<script type="text/javascript">jQuery.noConflict();
+</script>
 <script type="text/javascript" src="circles.js"></script>
     <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="theopenbudget.js"></script>
@@ -60,14 +62,28 @@ Hi! You seem to be using Internet Explorer 8 or below. Unfortunately this websit
 <br style="clear:both; height:0px;"/>
 <a href="#" id="initAddEntity"><img src="images/icons/list-add.png" class="btnimg" alt="Add an entity"/></a><br/>
 <div id="addEntityContainer" class="hidden">
+  Choose an existing entity:<br/>
   <select id="entitySel" style="width:190px;"></select><br/>
+  or upload one from Excel:
+  <form id="ephemeralUploadForm" action="/excel_to_json.json"
+  enctype="multipart/form-data" method="POST">
+  <input id="ephemeralUploadFile" type="file" name="excelfile" style="width:190px"></input><br>
+  <input id="ephemeralUploadBtn" type="submit" value="Upload"></input>
+  </form>
+  <div id="ephemeralOutput" class="hidden"></div>
 <a href="#" id="addEntity"><img src="images/icons/dialog-apply.png" class="btnimg" alt="Add this entity"/></a>
 <a href="#" id="cancelAddEntity"><img src="images/icons/dialog-cancel.png" class="btnimg" alt="Cancel"/></a>
 <p id="clickToPlaceTxt" class="hidden">Click to place</p>
 </div>
-<!--<input type="button" id="entityAdd"  onClick="javascript:addEntity();" value="Add Entity"></input>-->
-<hr style="width: 32px; float:right;"/>
+<!--<hr style="width: 32px; float:right;"/>
 <br style="clear:both; height:0px;"/>
+<select onChange="javascript:periodChange(this);" id="periodSelector">
+	<option value="2010-11">2010-11</option>
+	<option value="2011-12" selected="selected">2011-12</option>
+  </select>
+  <br>-->
+  <hr style="width:32px; float:right"/>
+  <br/>
 <p>Packing model:</p>
 <select id="packingSel">
 <option value="default">Old-style</option>
@@ -77,11 +93,7 @@ Hi! You seem to be using Internet Explorer 8 or below. Unfortunately this websit
 <p id="packingEfficiency"></p>
 <input type="checkbox" id="enclosingCircles"
        checked="checked">Enclosing Circles?</input>
-<!--<select onChange="javascript:periodChange(this);" id="periodSelector">
-	<option value="2010-11">2010-11</option>
-	<option value="2011-12" selected="selected">2011-12</option>
-  </select>
-  <hr/>-->
+
 
   </div>
   </div>
