Least terrible packing so far

--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@ Hi! You seem to be using Internet Explorer 8 or below. Unfortunately this websit
 <a href="#" id="cancelAddEntity"><img src="images/icons/dialog-cancel.png" class="btnimg" alt="Cancel"/></a>
 <p id="clickToPlaceTxt" class="hidden">Click to place</p>
 </div>
-<!--<hr style="width: 32px; float:right;"/>
+<hr style="width: 32px; float:right;"/>
 <br style="clear:both; height:0px;"/>
-<select onChange="javascript:periodChange(this);" id="periodSelector">
+<select onChange="javascript:periodChange(this);" id="periodSel">
 	<option value="2010-11">2010-11</option>
 	<option value="2011-12" selected="selected">2011-12</option>
+        <option value="2012-13">2012-13</option>
   </select>
-  <br>-->
+  <br>
   <hr style="width:32px; float:right"/>
   <br/>
 <p>Packing model:</p>
