Period control buttons

--- a/index.html
+++ b/index.html
@@ -78,11 +78,16 @@ Hi! You seem to be using Internet Explorer 8 or below. Unfortunately this websit
 <hr style="width: 32px; float:right;"/>
 <br style="clear:both; height:0px;"/>
 <select onChange="javascript:periodChange(this);" id="periodSel">
-	<option value="2010-11">2010-11</option>
 	<option value="2011-12" selected="selected">2011-12</option>
         <option value="2012-13">2012-13</option>
   </select>
   <br>
+  <a href="#" id="prevPeriodBtn"><img class="btnimg" alt="Prevous period" src="images/icons/seek-backward.png" /></a>
+  <a href="#" id="nextPeriodBtn"><img class="btnimg" alt="Next period" src="images/icons/seek-forward.png" /></a>
+  <br/>
+  <a href="#" id="playBtn"><img alt="Play" class="btnimg" src="images/icons/playback-start.png" /></a>
+  <a href="#" id="stopBtn"><img alt="Stop" class="btnimg" src="images/icons/playback-stop.png" /></a>
+  <br/>
   <hr style="width:32px; float:right"/>
   <br/>
 <p>Packing model:</p>
