Add meta viewport tag.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Pie Chart</title>
 <meta charset="utf-8">
 <script src="http://d3js.org/d3.v3.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1"> 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript" src="jquery.contextmenu.r2.js"></script>
 <script type="text/javascript" src="jquery.form.js"></script>
@@ -99,8 +100,6 @@ Hi! You seem to be using Internet Explorer 8 or below. Unfortunately this websit
 <p id="packingEfficiency"></p>
 <input type="checkbox" id="enclosingCircles"
        checked="checked">Enclosing Circles?</input>
-
-
   </div>
   </div>
 <div id="wedgeMenu" class="contextMenu">
